#1 Move the stopped balloon part to "issues".
Because the balloon part  took too much space.

--- a/kumamotoRed.css
+++ b/kumamotoRed.css
@@ -25,56 +25,13 @@ h5 {
 
 .back {
   color: tomato;
-  opacity:0.5       /*透ける*/
+  opacity:0.5    /*透ける*/
 }
 
-/*「うまか~」のふきだし部分(シンプルにしたくて取りやめ中)*/
-/*.balloon {          
-/*  position: relative;
-  display: inline-block;
-  padding: 5px;
-  width: auto;
-  min-width: 50px;
-  height: 15px;
-  line-height: 20px;
-  text-align: center;
-  background-color: #FDFFFF;
-  color: rgb(51,123,255); /*写真の空の青に合わせたい*/
-/*  border: none;
-  z-index: 0;
-  border-radius: 15px 15px 15px  15px;     /*丸み*/
-/*  left: 35%;
-  top: 11.5px;
-}
-.balloon:before {         /*三角形部分*/
- /* content: "";
-  position: absolute;
-  bottom: -8px; left: 50%;
-  margin-left: -9px;
-  width: 0px;
-  height: 0px;
-  border: none;
-   z-index: 0;
-}
-.balloon:after {
-  border-style: solid;
-  border-width: 11px 11px 0 11px;
-  border-color: #FDFFFF transparent transparent transparent;
-  content: "";
-  position: absolute;
-  bottom: -9.5px; left: 50%;
-  margin-left: -10px;
-  width: 0px;
-  height: 0px;
-  z-index: -1;      /*重なりの一番下*/
-/*  left:45%;
-}
-.rotated {
-  transform: rotate(-15deg);     /* 少し傾ける*/
-/*  }*/
+/*「うまか~」のふきだし部分(issues #1 へ移動)*/
 
 
-button {     /*右端角を丸く*/
+button {         /*右端角を丸く*/
   padding: 5px 15px;
   background-color: tomato;
   color: #FDFFFF;
@@ -82,7 +39,7 @@ button {     /*右端角を丸く*/
   border-radius:0px 10px 10px 0px;
 }
 
-input {       /*左端角を丸く*/
+input {           /*左端角を丸く*/
   height: 27px;
   border-style: none;
   border-radius:10px 0px 0px 10px;
